--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Theme Name: Business Insights
+Theme Name: wp-theme-personal-website
 Theme URI: https://www.themeinwp.com/theme/business-insights
 Author: Business Insights
 Author URI: https://www.themeinwp.com
