--- a/style.css
+++ b/style.css
@@ -2883,9 +2883,10 @@ body .widget.business_insights_popular_post_widget ul li {
     background-position: center center;
 }
 .slider-image {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 .single-slide .btn-link {
     border: 0;
