--- a/style-rtl.css
+++ b/style-rtl.css
@@ -581,7 +581,7 @@ td:last-child {
 ## Links
 --------------------------------------------------------------*/
 a {
-    color: #5a7fd5;
+    color: #434343;
     text-decoration: none;
 }
 a:hover,
@@ -591,7 +591,7 @@ a:focus {
 }
 a:active,
 a:visited {
-    color: #5a7fd5;
+    color: #000;
     filter: alpha(opacity=84);
     opacity: .84;
 }
