--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ td:last-child {
 ## Links
 --------------------------------------------------------------*/
 a {
-    color: #5a7fd5;
+    color: #000;
     text-decoration: none;
 }
 a:hover,
@@ -603,7 +603,7 @@ a:focus {
 }
 a:active,
 a:visited {
-    color: #5a7fd5;
+    color: #000;
     filter: alpha(opacity=84);
     opacity: .84;
 }
