--- a/style.css
+++ b/style.css
@@ -596,6 +596,10 @@ a {
     color: #000;
     text-decoration: none;
 }
+body a {
+    color: #5a7fd5;
+    text-decoration: none;
+}
 a:hover,
 a:focus {
     color: #000;
