--- a/style-rtl.css
+++ b/style-rtl.css
@@ -242,7 +242,6 @@ textarea {
     font-family: 'Source Sans Pro','Helvetica','Arial','sans-serif';
     text-align: justify;
     text-justify: auto;
-    color: #3d3d3d;
     letter-spacing: .3px;
     line-height: 1.6;
     font-size: 1.25rem;
@@ -596,10 +595,6 @@ a {
     color: #000;
     text-decoration: none;
 }
-p a {
-    color: #5a7fd5;
-    text-decoration: none;
-}
 a:hover,
 a:focus {
     color: #000;
@@ -618,6 +613,9 @@ a:active {
 }
 a:focus-visible {
     outline: thin dotted;
+}
+p a, p a:hover, p a:focus, p a:active, p a:visited {
+    color: rgb(0, 0, 238)
 }
 /*--------------------------------------------------------------
 ## Menus
