--- a/style.css
+++ b/style.css
@@ -596,10 +596,6 @@ a {
     color: #000;
     text-decoration: none;
 }
-p a {
-    color: #5a7fd5;
-    text-decoration: none;
-}
 a:hover,
 a:focus {
     color: #000;
@@ -618,6 +614,9 @@ a:active {
 }
 a:focus-visible {
     outline: thin dotted;
+}
+p a, p a:hover, p a:focus, p a:active, p a:visited {
+    color: rgb(0, 0, 238)
 }
 /*--------------------------------------------------------------
 ## Menus
