--- a/style.css
+++ b/style.css
@@ -2894,7 +2894,8 @@ body .widget.business_insights_popular_post_widget ul li {
     overflow: hidden;
 }
 
-.slider-image {
+.slider-image,
+.slider-image img {
     position: absolute;
     top: 50%;
     left: 50%;
