--- a/style-rtl.css
+++ b/style-rtl.css
@@ -427,8 +427,8 @@ body .nav-links .nav-next, body .nav-links .nav-previous {
 }
 
 button, input[type="button"], input[type="reset"], input[type="submit"] {
-    background: #5a7fd5;
-    border: 1px solid #5a7fd5;
+    background: #2c54af;
+    border: 1px solid #2c54af;
     color: #fff;
 }
 .btn-link:link,
@@ -621,7 +621,7 @@ ul.wp-block-list li a:focus,
 ul.wp-block-list li a:active,
 ul.wp-block-list li a:visited,
 p a, p a:hover, p a:focus, p a:active, p a:visited {
-    color: #5a7fd5;
+    color: #2c54af;
     text-decoration: underline;
 }
 /*--------------------------------------------------------------
@@ -1858,7 +1858,7 @@ body {
     padding-bottom: 110px;
 }
 body .inner-banner a {
-    color: #5a7fd5;
+    color: #6B94FF;
 }
 body .inner-banner-img {
     width: 100%;
@@ -3509,7 +3509,7 @@ nav.navigation.pagination {
 .btn-link-primary,
 .twp-testimonial .owl-dots .owl-dot.active span,
 .twp-testimonial .owl-dots .owl-dot:hover span {
-    background: #5a7fd5;
+    background: #2c54af;
     color: #fff;
 }
 .site-description,
@@ -3527,23 +3527,23 @@ input[type="submit"]:focus {
 }
 .btn-link:link:hover,
 .btn-link:visited:hover {
-    color: #5a7fd5;
+    color: #2c54af;
 }
 .btn-link,
 .item-block:hover,
 .item-block:focus {
-    border-color: #5a7fd5;
+    border-color: #2c54af;
 }
 @media only screen and (min-width: 992px) {
     .main-navigation .menu > ul > li:hover > a,
     .main-navigation .menu > ul > li:focus > a,
     .main-navigation .menu > ul > li.current-menu-item > a {
-        color: #5a7fd5;
+        color: #2c54af;
     }
     .main-navigation .menu > ul > li:hover > a:after,
     .main-navigation .menu > ul > li:focus > a:after,
     .main-navigation .menu > ul > li.current-menu-item > a:after {
-        background: #5a7fd5;
+        background: #2c54af;
     }
 }
 .primary-bgcolor a,
@@ -3568,19 +3568,19 @@ h6.primary-bgcolor,
     background: #ffffff;
 }
 .btn-link-secondary {
-    background: #5a7fd5;
+    background: #2c54af;
 }
 .btn-link-secondary:link:hover,
 .btn-link-secondary:visited:hover,
 .section-contact .social-icons ul li:hover a:after,
 .section-contact .social-icons ul li:focus a:after {
-    color: #5a7fd5;
+    color: #2c54af;
 }
 .btn-link-secondary,
 .center-widget-title.widget-title:after,
 .section-title:after,
 .intro-wrapper:after {
-    border-color: #5a7fd5;
+    border-color: #2c54af;
 }
 .inner-heading,
 .block-text {
@@ -3621,8 +3621,8 @@ body .nav-links .nav-previous a {
     padding-bottom: 14px;
 }
 body .nav-links .nav-next a, body .nav-links .nav-previous a {
-    background: #5a7fd5;
-    border: 1px solid #5a7fd5;
+    background: #2c54af;
+    border: 1px solid #2c54af;
     border-radius: 25px;
 }
 
@@ -3742,7 +3742,7 @@ ul.trail-items li:last-child a {
     display: block;
 }
 body .site .wpforms-container-full .wpforms-form button[type=submit] {
-    background-color: #5a7fd5;
+    background-color: #2c54af;
     border: 0;
     color: #fff;
     font-size: 16px;
@@ -3752,7 +3752,7 @@ body .site .wpforms-container-full .wpforms-form button[type=submit] {
 }
 body .site .wpforms-container-full .wpforms-form button[type=submit]:hover,
 body .site .wpforms-container-full .wpforms-form button[type=submit]:focus {
-    background-color: #5a7fd5;
+    background-color: #2c54af;
     border: 0;
     filter: alpha(opacity=70);
     opacity: 0.7;
