Fix CLS for carousel by masking unecessary elements before the script runs

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1926,6 +1926,12 @@ body .inner-banner-img {
 .single-slide {
     position: relative;
 }
+.single-slide, .slide-title, .slider-button {
+    display: none;
+}
+.first-single-slide {
+    display: block;
+}
 .overlay-bg,
 .single-slide:after {
     background: #000;
